pulse button added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Independent Business Consultant</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://www.badabusiness.com/assets/ibcenquiry/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="https://www.badabusiness.com/assets/ibcenquiry/css/media.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css"
         integrity="sha512-UTNP5BXLIptsaj5WdKFrkFov94lDx+eBvbKyoe1YAfjeRPC+gT5kyZ10kOHCfNZqEui1sxmqvodNUx3KbuYI/A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -68,7 +70,7 @@
                         </label>
                     </div>
                     <div class="form-group text-center">
-                        <button class="btn btn-outline-secondary align-center" type="submit">
+                        <button class="pulse-button btn btn-outline-secondary align-center" type="submit">
                             Register Now!
                         </button>
                     </div>
@@ -84,83 +86,31 @@
                 <h1 class="text-center">IBC Benefits</h1>
                 <h4 class="text-center underline"></h4>
             </div>
-            <div class="col-12 pt-4">
-                <div class="card benefit-card">
-                    <div class="card-body">
-                        <p class="card-text text-white"><img src="images/tick.svg"> Opportunity To Earn 1 To 10 Lakhs Per Month</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 pt-4">
-                <div class="card benefit-card">
-                    <div class="card-body">
-                        <p class="card-text text-white"><img src="images/tick.svg"> Opportunity To Be Recognised In Dr Vivek Bindra’s World Record
-                            Creating Mass Digital Webinars And Youtube Videos</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 pt-4">
-                <div class="card benefit-card">
-                    <div class="card-body">
-                        <p class="card-text text-white"><img src="images/tick.svg"> Market Relevant & Most Affordable Entrepreneurship
-                            Product Basket (EAE, PSC & LTM)</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 pt-4">
-                <div class="card benefit-card">
-                    <div class="card-body">
-                        <p class="card-text text-white"><img src="images/tick.svg"> High Revenue Earning Product For Sales - Case Studies And White-Labelled
-                            Learning Management System For Educational Institutions And Businesses</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 pt-4">
-                <div class="card benefit-card">
-                    <div class="card-body">
-                        <p class="card-text text-white"><img src="images/tick.svg"> Periodic Webinar By Dr Vivek Bindra.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 pt-4">
-                <div class="card benefit-card">
-                    <div class="card-body">
-                        <p class="card-text text-white"><img src="images/tick.svg"> Personalised Micro Website Creating Digital Identity To Facilitate Sales</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 pt-4">
-                <div class="card benefit-card">
-                    <div class="card-body">
-                        <p class="card-text text-white"><img src="images/tick.svg"> Digital POS (Point Of Sale) For Taking Payment, Tracking Sales Leads,
-                            Generating Payment Links For Customers & Viewing All Account Related Details</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 pt-4">
-                <div class="card benefit-card">
-                    <div class="card-body">
-                        <p class="card-text text-white"><img src="images/tick.svg"> Learning Management System For All Product Information,
-                            Marketing Collaterals And Growth Through Self-Learning</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 pt-4">
-                <div class="card benefit-card">
-                    <div class="card-body">
-                        <p class="card-text text-white"><img src="images/tick.svg"> Complaint Management System (CMS) To Raise Requests &
-                            Complaints Or To Give Suggestions</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 pt-4">
-                <div class="card benefit-card">
-                    <div class="card-body">
-                        <p class="card-text text-white"><img src="images/tick.svg"> Dedicated IBC Managers To Train On Product & Sales Techniques - How To Generate
-                            (Through Digital Marketing Or Other Techniques), Nurture And Close Leads</p>
-                    </div>
-                </div>
-            </div>
+            <ul class="desig_arrow pt-4">
+                <li class="justify-content-left align-items-center d-flex">Opportunity To Earn 1 To 10 Lakhs Per Month</li>
+                <li class="justify-content-left align-items-center d-flex">
+                  Opportunity To Be Recognised In Dr Vivek Bindra’s World Record<br>
+                  Creating Mass Digital Webinars And Youtube Videos
+                </li>
+                <li class="justify-content-left align-items-center d-flex">
+                  Market Relevant & Most Affordable Entrepreneurship<br>
+                  Product Basket (EAE, PSC & LTM)
+                </li>
+                <li class="justify-content-left align-items-center d-flex">
+                  High Revenue Earning Product For Sales - Case Studies And White-Labelled<br>
+                  Learning Management System For Educational Institutions And Businesses
+                </li>
+                <li class="justify-content-left align-items-center d-flex">Periodic Webinar By Dr Vivek Bindra.</li>
+                <li class="justify-content-left align-items-center d-flex">Personalised Micro Website Creating Digital Identity To Facilitate Sales</li>
+                <li class="justify-content-left align-items-center d-flex">Digital POS (Point Of Sale) For Taking Payment, Tracking Sales Leads,<br>
+                  Generating Payment Links For Customers & Viewing All Account Related Details</li>
+                <li class="justify-content-left align-items-center d-flex">Learning Management System For All Product Information,<br>
+                  Marketing Collaterals And Growth Through Self-Learning</li>
+                <li class="justify-content-left align-items-center d-flex">Complaint Management System (CMS) To Raise Requests &<br>
+                  Complaints Or To Give Suggestions</li>
+                <li class="justify-content-left align-items-center d-flex">Dedicated IBC Managers To Train On Product & Sales Techniques - How To Generate<br>
+                  (Through Digital Marketing Or Other Techniques), Nurture And Close Leads</li>
+            </ul>
         </div>
     </section>
 
@@ -336,10 +286,10 @@
                 </div>
             </div>
             <div class="col-lg-12 col-md-12 pt-4">
-                <a href="#enquire_form" id="pbutton" class="btn btn-primary d-block">
+                <a href="#enquire_form" id="pbutton" class="pulse-button btn btn-primary d-block">
                     <h4>Register Now!</h4>
                 </a>
-                <a href="#enquire_form" id="mbutton" class="btn btn-primary d-block">
+                <a href="#enquire_form" id="mbutton" class="pulse-button btn btn-primary d-block">
                     <h4>Register Now!</h4>
                 </a>
             </div>
@@ -354,106 +304,10 @@
                 <h4 class="text-center underline"></h4>
             </div>
             <div class="col-lg-12 col-md-12 pt-4">
-                <a href="#enquire_form" id="pbutton" class="btn btn-primary d-block">
+                <a href="#enquire_form" id="pbutton" class="pulse-button btn btn-primary d-block">
                     <h4>Register Now!</h4>
                 </a>
-                <a href="#enquire_form" id="mbutton" class="btn btn-primary d-block">
-                    <h4>Register Now!</h4>
-                </a>
-            </div>
-        </div>
-    </section>
-
-    <!-- Section 9 -->
-    <section id="bg-1" class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12 col-md-12 pt-4">
-                <h1 class="text-center">Meet Your Mentor</h1>
-                <h4 class="text-center underline"></h4>
-            </div>
-            <div class="col-lg-12 col-md-12 pt-4">
-                <div class="row">
-                    <div class="col-lg-3 col-12 col-md-12 pb-2 d-flex justify-content-center">
-                        <img style="border-radius:10px" class="img-fluid phero" src="images/hero.jpg">
-                        <img style="border-radius:10px" class="img-fluid mhero" src="images/hero.png">
-                    </div>
-                    <div class="mcard col-lg-2 col-3 col-md-3 pb-2">
-                        <div class="card text-center">
-                            <div class="card-body">
-                                <h5 class="card-title">17.3M+</h5>
-                                <p class="card-text">subscriber</p>
-                                <img width="50px" class="img-fluid" src="images/section-7/1.svg">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mcard col-lg-2 col-3 col-md-3 pb-2">
-                        <div class="card text-center">
-                            <div class="card-body">
-                                <h5 class="card-title">1.1B+</h5>
-                                <p class="card-text">views</p>
-                                <img width="50px" class="img-fluid" src="images/section-7/1.svg">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mcard col-lg-2 col-3 col-md-3 pb-2">
-                        <div class="card text-center">
-                            <div class="card-body">
-                                <h5 class="card-title">2.6M+</h5>
-                                <p class="card-text">followers</p>
-                                <img width="50px" class="img-fluid" src="images/section-7/2.svg">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mcard col-lg-2 col-3 col-md-3 pb-2">
-                        <div class="card text-center">
-                            <div class="card-body">
-                                <h5 class="card-title">200K+</h5>
-                                <p class="card-text">followers</p>
-                                <img width="50px" class="img-fluid" src="images/section-7/3.svg">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-12 col-md-12 pt-4">
-                <p>Dr Vivek Bindra is a Revolutionary Entrepreneur, an Internationally Acclaimed Motivational Speaker
-                    and a Business Coach.
-                    <br>Known for Creating Most Sought after Content on Leadership Development, which is Helping People
-                    across the Globe in achieving their Business Goals.
-                    <br>Author of 10 High Power Motivational Books, which are available on Flipkart and Amazon.
-                </p>
-            </div>
-            <div class="pinfo row">
-                <div class="col-lg-8 col-md-8 pt-4">
-                    <h4>YouTube</h4>
-                    <p><img class="img-fluid" width="15px" src="images/arrow.png"> Owner of World’s Most Subscribed
-                        Entrepreneurship YouTube Channel.
-                        <br><img class="img-fluid" width="15px" src="images/arrow.png"> With 10.1 Million Active
-                        Subscribers on YouTube, he is one of the World’s Greatest Influencers.
-                        <br><img class="img-fluid" width="15px" src="images/arrow.png"> Known for Creating a Free
-                        Learning University on YouTube.
-                    </p>
-                    <h4>Awards & Honours</h4>
-                    <p><img class="img-fluid" width="15px" src="images/arrow.png"> Bestowed with the Honorary Title of
-                        ‘Think Tank of Corporate Asia’ by World Leadership Federation, Dubai.
-                        <br><img class="img-fluid" width="15px" src="images/arrow.png"> Awarded the Best Leadership
-                        Trainer in Asia title by Marshall Goldsmith at the World HRD Congress.
-                        <br><img class="img-fluid" width="15px" src="images/arrow.png"> Awarded with India’s Greatest
-                        Brands and Leaders – Pride of the Nation Award in a ceremonial function hosted by
-                        PricewaterhouseCoopers (PwC)
-                        <br><img class="img-fluid" width="15px" src="images/arrow.png"> Awarded the Best CEO Coach in
-                        India by Times of India – Speaking Tree.
-                    </p>
-                </div>
-                <div class="col-lg-4 col-md-4 pt-4 d-flex justify-content-center">
-                    <img class="img-fluid" src="images/hero.png">
-                </div>
-            </div>
-            <div class="col-lg-12 col-md-12 pt-4">
-                <a href="#enquire_form" id="pbutton" class="btn btn-primary d-block">
-                    <h4>Register Now!</h4>
-                </a>
-                <a href="#enquire_form" id="mbutton" class="btn btn-primary d-block">
+                <a href="#enquire_form" id="mbutton" class="pulse-button btn btn-primary d-block">
                     <h4>Register Now!</h4>
                 </a>
             </div>
@@ -473,10 +327,10 @@
                 <h5 class="text-center mb-3">I'm Sure You Will Love It! 😃</h5>
             </div>
             <div class="col-lg-12 col-md-12 pt-4">
-                <a href="#enquire_form" id="pbutton" class="btn btn-primary d-block">
+                <a href="#enquire_form" id="pbutton" class="pulse-button btn btn-primary d-block">
                     <h4>Register Now!</h4>
                 </a>
-                <a href="#enquire_form" id="mbutton" class="btn btn-primary d-block">
+                <a href="#enquire_form" id="mbutton" class="pulse-button btn btn-primary d-block">
                     <h4>Register Now!</h4>
                 </a>
             </div>
